--- a/css/styles.css
+++ b/css/styles.css
@@ -484,7 +484,7 @@ display: flex;
     transform: translate(-50%, -50%) scale(0);
 }
 .modal{
-    position: absolute;
+    position:absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -493,6 +493,7 @@ display: flex;
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 1);
     transition: transform 300ms;
+    padding: 40px;
  
 }
 .btn-modal{
@@ -510,6 +511,40 @@ display: flex;
     border-color: rgba(0, 0, 0, 0.1);
     cursor: pointer;
 }
+
+.form{
+   margin-left: auto;
+   margin-right: auto;
+  
+}
+.form-title{
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+    margin-bottom: 12px;
+}
+
+.form-field{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+.form-input{
+    padding: 0;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    height: 40px;
+}
+ .form-label{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: var(--primary-text-color);
+    margin-bottom: 4px;
+ }
 
 
         /* footer */
