--- a/css/styles.css
+++ b/css/styles.css
@@ -531,12 +531,13 @@ display: flex;
 .form-field{
     display: flex;
     flex-direction: column;
+    position: relative;
     margin-bottom: 10px;
     
 }
 .form-input{
     padding: 0;
-    background-color: transparentarea;
+    background-color: transparent;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     height: 40px;
@@ -552,11 +553,18 @@ display: flex;
     margin-bottom: 4px;
   
  }
+ .form-icon{
+    position: absolute;
+    left: 12px;
+    bottom: 11px;
+    fill: var(--title-text-color);
+   
+ }
 
 .form-area{
     height: 120px;
     padding: 12px 16px;
-    background-color: transparentarea;
+    background-color: transparent;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     resize: none;
