--- a/css/styles.css
+++ b/css/styles.css
@@ -510,8 +510,12 @@ display: flex;
     background-color: #FFFFFF;
     border-color: rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.btn-modal:hover{
+    fill: var(--accent-color);
+}
 .form{
    margin-left: auto;
    margin-right: auto;
@@ -536,7 +540,7 @@ display: flex;
     
 }
 .form-input{
-    padding: 0;
+    padding-left: 42px;
     background-color: transparent;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -558,8 +562,17 @@ display: flex;
     left: 12px;
     bottom: 11px;
     fill: var(--title-text-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
  }
+
+ .form-input:hover+ .form-icon{ 
+   fill: var(--accent-color);
+   
+ }
+ /* .form-input:hover{
+    color: var(--accent-color);
+ } */
 
 .form-area{
     height: 120px;
