--- a/css/styles.css
+++ b/css/styles.css
@@ -529,6 +529,7 @@ display: flex;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
     margin-bottom: 12px;
+    text-align: center;
     
 }
 
@@ -544,6 +545,7 @@ display: flex;
     background-color: transparent;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    outline-color: var(--accent-color);
     height: 40px;
     cursor: pointer;
 }
@@ -566,20 +568,18 @@ display: flex;
    
  }
 
- .form-input:hover+ .form-icon{ 
+ .form-input:focus+ .form-icon{ 
    fill: var(--accent-color);
-   
+  
  }
- /* .form-input:hover{
-    color: var(--accent-color);
- } */
-
+ 
 .form-area{
     height: 120px;
     padding: 12px 16px;
     background-color: transparent;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    outline-color: var(--accent-color);
     resize: none;
     cursor: pointer;
     margin-bottom: 20px;
@@ -593,22 +593,22 @@ display: flex;
 }
 
 .btn-submit{
-display: block;
-margin: auto;
-margin-top: 30px;
-width: 200px;
-height: 50px;
-background-color: rgba(24, 140, 232, 1);  
-padding: 10px 55px;    
-border-radius: 4px;
-border-color: transparent ; 
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-color: #FFFFFF;
-font-size: 16px;
-line-height: 1.88;
-font-weight: 700;
-letter-spacing: 0.06em;
-cursor: pointer;
+    display: block;
+    margin: auto;
+    margin-top: 30px;
+    width: 200px;
+    height: 50px;
+    background-color: rgba(24, 140, 232, 1);  
+    padding: 10px 55px;    
+    border-radius: 4px;
+    border-color: transparent ; 
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    color: #FFFFFF;
+    font-size: 16px;
+    line-height: 1.88;
+    font-weight: 700;
+    letter-spacing: 0.06em;
+    cursor: pointer;
 
 }
 
@@ -757,6 +757,11 @@ footer {
     cursor: pointer;
   }
 
+  .footer-form-input:focus{
+    background-color: transparent;
+    color: #FFFFFF;
+  }
+
   .footer-btn-submit{
     margin: 0;
     margin-left: 12px;
@@ -777,7 +782,6 @@ footer {
     position: absolute;
     top: 13px;
     right: 28px;
-   
     fill: #FFFFFF;
   }
 
