--- a/css/styles.css
+++ b/css/styles.css
@@ -534,16 +534,20 @@ display: flex;
 }
 
 .form-field{
-    display: flex;
+    
     flex-direction: column;
     position: relative;
     margin-bottom: 10px;
         
 }
 
+.form-wrap{
+    display: flex;
+}
 
 .form-input{
     padding-left: 42px;
+    width: 100%;
     background-color: transparent;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -563,8 +567,8 @@ display: flex;
  }
  .form-icon{
     position: absolute;
-    left: 12px;
-    bottom: 11px;
+    left:12px;
+    top:50%;
     fill: var(--title-text-color);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
@@ -577,6 +581,7 @@ display: flex;
  
 .form-area{
     height: 120px;
+    width: 100%;
     padding: 12px 16px;
     background-color: transparent;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -620,7 +625,7 @@ display: flex;
     border-radius: 2px;
     margin-right: 8px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    background-color: transparent;
+    
        
 }
 .policy a{
@@ -779,7 +784,7 @@ footer {
  }
 
  .footer-form-mail{
-     margin-left: 93px;
+     margin-left: auto;
  }
   .footer-form-title{
     font-weight: 400;
