--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,8 @@ h2,
 h3,
 h4,
 h5,
-h6{
+h6,
+p{
 margin: 0;
 }
 
@@ -423,7 +424,7 @@ display: flex;
     	.clients-list {
     	    display: flex;
     	    justify-content: center;
-            border:;
+            
            
     	}
     
@@ -622,12 +623,12 @@ display: flex;
     width: 15px;
     height: 15px;
     border: 2px solid var(--title-text-color);
-    border-radius: 2px;
+    border-radius: 4px;
     margin-right: 8px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    
-       
+         
 }
+
 .policy a{
     display: flex;
     justify-content: center;
@@ -769,7 +770,7 @@ footer {
      width: 100%;
      height: 100%;
      border-radius: 50%;
-     background-color: rgba(0, 0, 0, 0.25);
+     background-color:rgba(255, 255, 255, 0.1);
      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
  }
 
